--- a/res/layout/preference_list_fragment.xml
+++ b/res/layout/preference_list_fragment.xml
@@ -21,7 +21,7 @@
     android:orientation="vertical"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:background="@android:color/transparent">
+    android:background="?android:attr/windowBackground">
 
     <ListView android:id="@android:id/list"
         android:layout_width="fill_parent"
